# rusty-bucket-drop

./: Cargo.toml
assets/skin/: skin.json
src/: main.rs
