[package]
name = "rusty-bucket-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "hdr",
    "multi-threaded",
    "png",
    "jpeg",
    "mp3",
    "wav",
    "wayland"
] }
bevy_kira_audio = { version = "0.18.0", features = ["mp3", "wav"] }
leafwing-input-manager = "0.11.1"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code. Disable if debug steps are weird.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
